Prototipo de disenio y conexion a la PokeAPI

--- a/Pokedex/app/src/main/res/layout/item_list.xml
+++ b/Pokedex/app/src/main/res/layout/item_list.xml
@@ -7,22 +7,22 @@
     android:padding="16dp"
     >
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/pokemon_image"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/pokemon_logo_min"
+        android:background="?android:selectableItemBackground"
         android:layout_gravity="center"
-        android:id="@+id/pokemon_image"
-        />
+        android:src="@drawable/pokemon_logo_min" />
 
     <TextView
+        android:id="@+id/pokemon_detail_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_thin"
+        android:gravity="center"
         android:text="Pokemon"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:id="@+id/pokemon_name"
 
-        />
+        android:textStyle="bold" />
 </LinearLayout>
