--- a/Pokedex/app/src/main/res/layout/activity_login.xml
+++ b/Pokedex/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.ActivitySplashscreen"
-    android:background="@drawable/gradient_background"
-    >
+    android:background="@drawable/gradient_background">
 
     <ImageView
         android:layout_width="240dp"
@@ -42,37 +40,40 @@
                     android:src="@drawable/pokemon_logo_min"
                     />
             </LinearLayout>
+
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Username"
-                android:textSize="24sp"
-                android:gravity="center"
-                android:textColor="@color/colorSecondaryText"
-                android:textColorHint="@color/colorSecondaryText"
                 android:id="@+id/username_login"
-                />
-            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
-                android:textSize="24sp"
+                android:fontFamily="@font/roboto_thin"
                 android:gravity="center"
+                android:hint="Username"
                 android:textColor="@color/colorSecondaryText"
                 android:textColorHint="@color/colorSecondaryText"
-                android:inputType="textPassword"
+                android:textSize="24sp" />
+
+            <EditText
                 android:id="@+id/password_login"
-                />
-            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login"
-                style="?android:attr/borderlessButtonStyle"
+                android:fontFamily="@font/roboto_thin"
+                android:gravity="center"
+                android:hint="Password"
+                android:inputType="textPassword"
                 android:textColor="@color/colorSecondaryText"
-                android:textSize="24sp"
-                android:layout_marginTop="16dp"
+                android:textColorHint="@color/colorSecondaryText"
+                android:textSize="24sp" />
+
+            <Button
                 android:id="@+id/button_login"
-                />
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto_thin"
+                android:text="Login"
+                android:textColor="@color/colorSecondaryText"
+                android:textSize="24sp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
